custom linked list is done

--- a/03-linked-list/pom.xml
+++ b/03-linked-list/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>linked-list</artifactId>
+    <artifactId>03-linked-list</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
